add memory heapdump option